Fix image on mobile devices

--- a/scss/degrees.scss
+++ b/scss/degrees.scss
@@ -17,7 +17,14 @@ article {
 }
 
 .image {
+    display: none;
     width: 100%;
+}
+
+@media (min-width: 550px) {
+    .image {
+        display: block;
+    }
 }
 
 .website {
